# chipai

./: .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
db/: history.db-shm
src/chipai/: agent.py  cli.py  main.py  prompts.py
