[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.metadata]
requires-python = "3.11"

[project]
name = "chipai"
version = "0.0.1"
dependencies = [
	"streamlit>=1.51.0",
	"Authlib>=1.3.2",
	"langchain-google-genai>=3.2.0",
	"langchain-core>=1.1.0",
	"langchain-community>=0.4.1",
	"langchain-tavily>=0.2.13",
	"langgraph>=1.0.4",
	"langgraph-checkpoint-sqlite>=3.0.0",
	"typing-extensions>=4.15.0",
	"requests>=2.32.5",
	"Pillow>=12.0.0",
	"python-dotenv>=1.2.1",
	"wikipedia>=1.4.0",
]

[project.scripts]
chipai = "chipai.cli:main"





